--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
             <version>31.1-jre</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
